--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,10 @@
 {
   "name": "expenselogger",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {
+      "enabled": false
+    },
+    "cordova": {}
   },
   "type": "angular"
 }
